2007-12-01  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTheme.h, generic/ttk/ttkThemeInt.h,
	generic/ttk/ttkTheme.c, generic/ttk/ttkLayout.c,
	generic/ttk/ttkClamTheme.c, generic/ttk/ttkClassicTheme.c,
	generic/ttk/ttkTreeview.c, macosx/ttkMacOSXTheme.c,
	win/ttkWinTheme.c, win/ttkWinXPTheme.c: Improved macrology for
	statically-initialized layout template tables.

2007-11-28  Don Porter  <dgp@users.sourceforge.net>

	* unix/tkUnixPort.h:	When unix/configure determines whether the
	intptr_t type is available, it has the <inttypes.h> header present.
	It's only fair that we let Tk have it too. 

2007-11-26  Kevin Kenny  <kennykb@acm.org>

	* generic/tkImgPPM.c (StringReadPPM): Corrected a comparison
	whose sense was reversed that resulted in reading beyond the
	end of the input buffer on malformed PPM data. [Bug #1822391]
	* library/tkfbox.tcl (VerifyFileName): Corrected a couple
	of typos in handling of bad file names. [Bug #1822076]
	Thanks to Christoph Bauer (fridolin@users.sf.net) for the
	patch.
	* tests/filebox.test (filebox-7.1, filebox-7.2): Added
	test cases that exercise [Bug #1822076].
	* tests/imgPPM.test (imgPPM-4.1): Added test case that
	exercises [Bug #1822391].
	
2007-11-25  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkManager.h, generic/ttk/ttkManager.c,
	generic/ttk/ttkFrame.c, generic/ttk/ttkNotebook.c,
	generic/ttk/ttkPanedwindow.c:  Internal Ttk_Manager API 
	updates; Fixed [Bug 1343984]; Added [$nb hide] method;
	[$nb add] on already-managed windows no longer throws 
	an error, can be used to re-add a hidden tab.

	* doc/ttk_notebook.n, tests/ttk/notebook.test,
	tests/ttk/panedwindow.test:  Updated docs and test suite.

2007-11-23  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* unix/README: General improvements.

2007-11-21  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* library/tkfbox.tcl: Better theming in the file list area.

2007-11-19  Don Porter  <dgp@users.sourceforge.net>
